package NYT.NTransactionClient.NProto;

import "yt/ytlib/misc/guid.proto";
import "yt/ytlib/object_client/master_ypath.proto";

////////////////////////////////////////////////////////////////////////////////

message TReqCommit
{ }

message TRspCommit
{ }

////////////////////////////////////////////////////////////////////////////////

message TReqAbort
{ }

message TRspAbort
{ }

////////////////////////////////////////////////////////////////////////////////

message TReqRenewLease
{
    optional bool renew_ancestors = 1 [default = false];
}

message TRspRenewLease
{ }

////////////////////////////////////////////////////////////////////////////////

message TReqUnstageObject
{
    required NYT.NProto.TGuid object_id = 1;
    required bool recursive = 2;
}

message TRspUnstageObject
{ }

////////////////////////////////////////////////////////////////////////////////

// CreateObject extension.

message TReqCreateTransactionExt
{
    extend NYT.NObjectClient.NProto.TReqCreateObject
    {
        optional TReqCreateTransactionExt create_transaction = 101;
    }

    // Transaction timeout (in ms).
    optional int32 timeout = 1;

    // Enable including uncommitted resources into account resource usage.
    optional bool enable_uncommitted_accounting = 2 [default = true];

    // Enable including staged resources into account resource usage.
    optional bool enable_staged_accounting = 3 [default = true];
}

////////////////////////////////////////////////////////////////////////////////
